@@ -89,11 +89,11 @@ public:
 		// these are flags which correspond to the intermediate buffer
 		// stages necessary to render the element
 		COMPOSITE_TRANSFORM = 0x8000,
-		COMPOSITE_CLIP = 0x10000,
-		COMPOSITE_EFFECT = 0x20000,
-		COMPOSITE_OPACITY = 0x40000,
-		COMPOSITE_OPACITY_MASK = 0x80000,
-		COMPOSITE_MASK = (COMPOSITE_TRANSFORM | COMPOSITE_CLIP | COMPOSITE_EFFECT | COMPOSITE_OPACITY | COMPOSITE_OPACITY_MASK)
+		COMPOSITE_EFFECT = 0x10000,
+		COMPOSITE_OPACITY = 0x20000,
+		COMPOSITE_OPACITY_MASK = 0x40000,
+		COMPOSITE_CACHE = 0x80000,
+		COMPOSITE_MASK = (COMPOSITE_TRANSFORM | COMPOSITE_EFFECT | COMPOSITE_OPACITY | COMPOSITE_OPACITY_MASK | COMPOSITE_CACHE)
 	};
 	
 	virtual TimeManager *GetTimeManager ();
