@@ -1,5 +1,8 @@
 2010-08-19  David Reveman  <davidr@novell.com>
 
+	* uielement.h:
+	* uielement.cpp: Replace COMPOSITE_CLIP with COMPOSITE_CACHE.
+
 	* effect.cpp: Don't allow table based filters to modify the
 	source surface.
 
